# tttech-tsn-acm-content

ngn.acm-config/: .gitignore  Makefile  Makefile.test  libacmconfig.pc  rules.mk
ngn.acm-config/doc/: libacmconfig.doxyfile  libacmgraph.doxyfile
ngn.acm-config/include/: libacmconfig.h  libacmconfig_def.h
ngn.acm-config/src/: application.c  application.h  buffer.c  buffer.h  config.c  config.h  constructor.c  constructor.h  hwconfig_def.h  libacmconfig.c  list.h  logging.c  logging.h  lookup.c  lookup.h  memory.c  memory.h  module.c  module.h  operation.c  operation.h  schedule.c  schedule.h  status.c  status.h  stream.c  stream.h  sysfs.c  sysfs.h  tracing.c  tracing.h  validate.c  validate.h
ngn.acm-config/test/: project.yml
ngn.acm-yang/: CMakeLists.txt  acm.c
ngn.acm-yang/CMakeModules/: FindACMCONFIG.cmake  GetGitVersion.cmake
ngn.acm-yang/common/: common.c  common.h  common_defines.h
ngn.acm-yang/model/: acm.yang  ietf-yang-types.yang
ngn.acm-yang/source/: acm_defines.h  error_codes.h  parse_functions.c  parse_functions.h
ngn.ngn-dd/: .gitignore  GIT-VERSION-GEN  Makefile  Makefile.test
ngn.ngn-dd/acm/: Makefile  acm-module.h  acmbitops.h  acmio.h  bypass.c  bypass.h  chardev.c  chardev.h  commreg.c  commreg.h  config.c  config.h  main.c  msgbuf.c  msgbuf.h  redundancy.c  redundancy.h  reset.c  reset.h  scheduler.c  scheduler.h  state.c  state.h  sysfs.c  sysfs.h  sysfs_config.c  sysfs_config.h  sysfs_control.c  sysfs_control.h  sysfs_diag.c  sysfs_diag.h  sysfs_error.c  sysfs_error.h  (+2 more)
ngn.ngn-demo/: .gitignore  Makefile  rules.mk
(+65 files in other folders)
